package domain.issue

case class CutComment(n: IssueNumber)

case class CrunchComment(n: IssueNumber)
